<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.egov</groupId>
    <artifactId>individual</artifactId>
    <packaging>jar</packaging>
    <name>individual</name>
    <version>1.1.5</version>
    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <lombok.version>1.18.22</lombok.version>
    </properties>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.2</version>
    </parent>
    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.1.2</version>
                    <configuration>
                        <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
                    </configuration>
                </plugin>
            </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.egov.common</groupId>
            <artifactId>health-services-common</artifactId>
            <version>1.0.17-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.egov.common</groupId>
            <artifactId>health-services-models</artifactId>
            <version>1.0.20-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
            <version>9.22.3</version>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.1</version>
        </dependency>
        <dependency>
            <groupId>org.egov.services</groupId>
            <artifactId>tracer</artifactId>
            <version>2.9.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.swagger</groupId>
            <artifactId>swagger-core</artifactId>
            <version>1.5.18</version>
        </dependency>
        <!-- Egov dependencies -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.egov</groupId>
            <artifactId>enc-client</artifactId>
            <version>2.9.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.egov.services</groupId>
                    <artifactId>tracer</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
        </dependency>
    </dependencies>
    <repositories>
        <repository>
            <id>repo.egovernments.org</id>
            <name>eGov ERP Releases Repository</name>
            <url>https://nexus-repo.egovernments.org/nexus/content/repositories/releases/</url>
        </repository>
        <repository>
            <id>repo.egovernments.org.snapshots</id>
            <name>eGov ERP Releases Repository</name>
            <url>https://nexus-repo.egovernments.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>repo.egovernments.org.public</id>
            <name>eGov Public Repository Group</name>
            <url>https://nexus-repo.egovernments.org/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <id>repo.digit.org</id>
            <name>eGov DIGIT Releases Repository</name>
            <url>https://nexus-repo.digit.org/nexus/content/repositories/snapshots/</url>
        </repository>
    </repositories>
</project>
